--- a/aula04/ex002.html
+++ b/aula04/ex002.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Javascript</title>
+    <title>Javascript 002</title>
     <style>
         body{
             background-color: rgb(80, 206, 206);
@@ -25,9 +25,9 @@
 
 
     <script>
-        window.alert("Minha Primeira Mensagem!")
-        window.confirm('Está gostando JS?')
-        window.prompt('Qual é seu nome?')
+        var nome = window.prompt('Digite seu nome')
+
+        window.alert('Seu nome é ' + nome)
     </script>
 </body>
 </html>
