--- a/aula04/ex003.html
+++ b/aula04/ex003.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Javascript</title>
+    <title>Javascript 003</title>
     <style>
         body{
             background-color: rgb(80, 206, 206);
@@ -25,9 +25,13 @@
 
 
     <script>
-        window.alert("Minha Primeira Mensagem!")
-        window.confirm('Está gostando JS?')
-        window.prompt('Qual é seu nome?')
+               
+        var n1 = Number(window.prompt("Digite um número")) 
+        var n2 = Number(window.prompt("Digite outro número"))
+
+        var s = n1 + n2
+
+        window.alert(`A soma entre ${n1} e ${n2} é igual a ${s}`)
     </script>
 </body>
 </html>
