--- a/aula04/ex004.html
+++ b/aula04/ex004.html
@@ -12,6 +12,7 @@
     </style>
 </head>
 <body>
+    <img style="width:150px;" src="portrait-of-young-handsome-black-man-on-white.jpg" alt="imagem de teste">
     
     <script>
         var nome = window.prompt('Qual é seu nome?')
