--- a/aula04/ex007.html
+++ b/aula04/ex007.html
@@ -43,7 +43,8 @@
 
             res.innerText = `A soma entre ${n1} e ${n2} é igual a ${s}`
         }
-
+        var raio = prompt("Digite um número")
+        parseFloat()
     </script>
 </body>
 </html>
