--- a/aula11/ex0101.html
+++ b/aula11/ex0101.html
@@ -86,11 +86,9 @@
             result.innerHTML += `<br> Você é Brasileiro!`
             result.style.height='100px'
             result.style.color='green'
-            capa.style.backgroundImage='url(../aula11/imagens/realistic-shot-of-the-waving-flag-of-brazil-with-interesting-textures.jpg)'
-            capa.style.backgroundPosition='center center'
-            capa.style.backgroundRepeat='no-repeat'
             
             capa.style.backgroundSize='100vh'
+            capa.style.backgroundColor='green'
 
         }else{
             result.innerHTML += `<br> Você é Estrangeiro!`
