--- a/aula19/ex014.html
+++ b/aula19/ex014.html
@@ -13,10 +13,18 @@
     </header>
     <section>
         <div>
-            Testando...
+            <p>
+                Número (entre 1 e 100): <input type="number" name="num" id="txtnum">
+                <input type="button" value="Adicionar" onclick="adicionar()"> 
+            </p>
         </div>
+
         <div>
-            Olá!
+            <select size="7" id="select">
+                
+            </select><br>
+                <input type="button" value="Finalizar" onclick="finalizar()">
+                <p id="resultado"></p>
         </div>
     </section>
     <footer>
